<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDetailStory"
            android:layout_width="match_parent"
            android:layout_height="410dp"
            android:clickable="true"
            android:contentDescription="@string/image_photo"
            android:focusable="true"
            android:scaleType="fitCenter"
            android:transitionName="profileDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvDetailTitle"
            android:transitionName="titleDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivDetailStory" />

        <TextView
            android:id="@+id/tvDetailDesc"
            android:transitionName="description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:hint="@string/description"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailTitle"
            app:layout_constraintStart_toStartOf="@+id/tvDetailTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>